DT-1524: Log Special Events (#2497)